fix: UIS-2688: fix maker/checker buttons displacement when header title is too long

--- a/components/PageLayout/style.css
+++ b/components/PageLayout/style.css
@@ -26,10 +26,19 @@
 
 .buttonsWrap {
     overflow: hidden;
+    margin-left: 20px; /* Margin between buttons and the heading */
 }
-
+.buttonsContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
 .buttonWrap {
     float: left;
+    margin-right: 20px;
+}
+.buttonWrap:last-child {
+    margin-right: 0;
 }
 
 .headerWrapper {
